@@ -11,6 +11,9 @@ import CamNecT.CamNecT_Server.domain.community.repository.Comments.AcceptedComme
 import CamNecT.CamNecT_Server.domain.community.repository.Posts.PostStatsRepository;
 import CamNecT.CamNecT_Server.domain.community.repository.Posts.PostTagsRepository;
 import CamNecT.CamNecT_Server.domain.community.repository.Posts.PostsRepository;
+import CamNecT.CamNecT_Server.global.common.exception.CustomException;
+import CamNecT.CamNecT_Server.global.common.response.errorcode.ErrorCode;
+import CamNecT.CamNecT_Server.global.common.response.errorcode.bydomains.CommunityErrorCode;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Slice;
@@ -39,15 +42,21 @@ public class PostQueryServiceImpl implements PostQueryService {
 
         Long cv = cursorValue;
         if (cv == null && cursorId != null && sort != Sort.LATEST) {
-            cv = postStatsRepository.findByPost_Id(cursorId)
-                    .map(ps -> switch (sort) {
-                        case RECOMMENDED -> ps.getHotScore();
-                        case LIKE        -> ps.getLikeCount();
-                        case BOOKMARK    -> ps.getBookmarkCount();
-                        // 여기 오지 않음
-                        default -> throw new IllegalStateException("Unexpected value: " + sort);
-                    })
-                    .orElse(0L);
+
+            // cursorId 자체가 존재하는지 먼저 확인하고 싶으면(선택)
+            if (!postsRepository.existsById(cursorId)) {
+                throw new CustomException(CommunityErrorCode.INVALID_CURSOR);
+            }
+
+            PostStats ps = postStatsRepository.findByPost_Id(cursorId)
+                    .orElseThrow(() -> new CustomException(CommunityErrorCode.POST_STATS_NOT_FOUND));
+
+            cv = switch (sort) {
+                case RECOMMENDED -> ps.getHotScore();
+                case LIKE        -> ps.getLikeCount();
+                case BOOKMARK    -> ps.getBookmarkCount();
+                default -> throw new CustomException(ErrorCode.INTERNAL_ERROR); // 사실상 불가
+            };
         }
 
         Slice<Posts> slice = switch (sort) {
@@ -75,7 +84,7 @@ public class PostQueryServiceImpl implements PostQueryService {
                     code,
                     tagId,
                     kw,
-                    cv,        // ✅ cursorValue(likeCount)
+                    cv,        // cursorValue(likeCount)
                     cursorId,
                     PageRequest.of(0, limit)
             );
@@ -85,7 +94,7 @@ public class PostQueryServiceImpl implements PostQueryService {
                     code,
                     tagId,
                     kw,
-                    cv,        // ✅ cursorValue(bookmarkCount)
+                    cv,        // cursorValue(bookmarkCount)
                     cursorId,
                     PageRequest.of(0, limit)
             );
@@ -122,6 +131,8 @@ public class PostQueryServiceImpl implements PostQueryService {
     }
 
     private PostListResponse mapToListResponse(Slice<Posts> slice, Sort sort) {
+        int MAX_CONTENT = 80;
+
         List<Posts> posts = slice.getContent();
         if (posts.isEmpty()) return PostListResponse.of(List.of(), slice.hasNext(), null);
 
@@ -152,7 +163,7 @@ public class PostQueryServiceImpl implements PostQueryService {
             long answerCount = ps == null ? 0 : ps.getRootCommentCount();     // 질문 탭 "답변"
             long bookmarkCount = ps == null ? 0 : ps.getBookmarkCount();
 
-            String preview = makePreview(p.getContent(), 80);
+            String preview = makePreview(p.getContent(), MAX_CONTENT);
 
             items.add(new PostSummaryResponse(
                     p.getId(),
@@ -170,7 +181,7 @@ public class PostQueryServiceImpl implements PostQueryService {
             ));
         }
 
-        Posts last = posts.get(posts.size() - 1);
+        Posts last = posts.getLast();
         PostStats lastStats = statsMap.get(last.getId());
 
         Long nextCursorValue = switch (sort) {
